--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <p id="demo">It displays your current location:</p>
 
-    <div id="mapholder"></div>
+    <div style="width:100%;height:100%;" id="mapholder"></div>
     <div id="time"></div>
 
     <script>
