--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <p id="demo">It displays your current location:</p>
 
-    <div style="width:100%;height:100%;" id="mapholder"></div>
+    <div id="mapholder"></div>
     <div id="time"></div>
 
     <script>
@@ -27,7 +27,7 @@
             var latlon = position.coords.latitude + "," + position.coords.longitude;
 
             var img_url = "http://maps.googleapis.com/maps/api/staticmap?center="
-                + latlon + "&markers=size:mid%7Ccolor:red%7C" + latlon + "&zoom=14&sensor=false";
+                + latlon + "&markers=size:mid%7Ccolor:red%7C" + latlon + "&zoom=14&size=400x300&sensor=false";
             document.getElementById("mapholder").innerHTML = "<img src='" + img_url + "'>";
         }
 
